<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"

            app:layout_constraintBottom_toTopOf="@id/button_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"

            app:layout_constraintBottom_toTopOf="@id/button_ratings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_find" />

        <Button
            android:id="@+id/button_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"

            app:layout_constraintBottom_toTopOf="@id/button_votes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_scan" />

        <Button
            android:id="@+id/button_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votes"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"

            app:layout_constraintBottom_toTopOf="@id/button_database"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_ratings" />

        <Button
            android:id="@+id/button_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"

            app:layout_constraintBottom_toTopOf="@+id/button_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_votes" />
        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"

            app:layout_constraintBottom_toTopOf="@id/button_load"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_database" />
        <Button
            android:id="@+id/button_load"
            android:onClick="getStoreList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Load"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"

            app:layout_constraintBottom_toTopOf="@id/button_clear_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_settings" />
        />
        <Button
            android:id="@+id/button_clear_event"
            android:onClick="clearEventHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Event/Restart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_load" />
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>